added empty-route.component + navigation.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <h1>Мой заголовок</h1>
 
-<span>{{title}}</span>
-<input type="text" [title]="tooltip">
-<button (click)="showMessage()">Button</button>
+<my-navigation></my-navigation>
 
-<app-my-calculator></app-my-calculator>
+<router-outlet></router-outlet>
