--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>Мой заголовок</h1>
+<header class="header">
+    <h1>Мой заголовок</h1>
 
-<my-navigation></my-navigation>
+    <my-navigation></my-navigation>
+</header>
 
 <router-outlet></router-outlet>
