--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,26 @@
 <ul>
-    <li><a [routerLink]="['/calculator']" routerLinkActive="active">Calculator</a></li>
-    <li><a [routerLink]="['/object-list']" routerLinkActive="active">Object list</a></li>
-    <li><a [routerLink]="['/directives']" routerLinkActive="active">Directives</a></li>
-    <li><a [routerLink]="['/lifecycle']" routerLinkActive="active">Life-cycle</a></li>
-    <li><a [routerLink]="['/requests']" routerLinkActive="active">Requests</a></li>
+    <li>
+        <a [routerLink]="['/calculator']" routerLinkActive="active">Calculator</a>
+        <div></div>
+    </li>
+    <li>
+        <a [routerLink]="['/object-list']" routerLinkActive="active">Object list</a>
+        <div></div>
+    </li>
+    <li>
+        <a [routerLink]="['/directives']" routerLinkActive="active">Directives</a>
+        <div></div>
+    </li>
+    <li>
+        <a [routerLink]="['/lifecycle']" routerLinkActive="active">Life-cycle</a>
+        <div></div>
+    </li>
+    <li>
+        <a [routerLink]="['/requests']" routerLinkActive="active">Requests</a>
+        <div></div>
+    </li>
+    <li>
+        <a [routerLink]="['pipes']">Pipes</a>
+        <div></div>
+    </li>
 </ul>
