--- a/src/app/forms/components/forms/forms.component.scss
+++ b/src/app/forms/components/forms/forms.component.scss
@@ -2,6 +2,13 @@
     display: flex;
     flex-direction: column;
 
+    margin: 2rem;
+
+    border: 2px solid black;
+    border-radius: 15px;
+
+    padding: 1.5rem;
+
     gap: 20px;
 
     justify-content: center;
@@ -16,7 +23,13 @@
         gap: 15px;
 
         label {
-            width: 80px;
+            width: 160px;
         }
+    }
+
+    &__array {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
