--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -27,4 +27,8 @@
         <a [routerLink]="['forms']">Forms</a>
         <div></div>
     </li>
+    <li>
+        <a [routerLink]="['decorators']">Decorators</a>
+        <div></div>
+    </li>
 </ul>
