--- a/src/app/directives/directives-page.component.html
+++ b/src/app/directives/directives-page.component.html
@@ -50,7 +50,7 @@
 
 <!--<span [ngStyle]="elementStyle"> Я текст, измененный полем класса </span>-->
 
-<h2 [myChangeColor]="colors">Custom directive</h2>
+<h2 myChangeColor>Custom directive</h2>
 
 <span *myIf="isShow">{{ isShow }}</span>
 
