--- a/src/app/view-styles/components/view-foo/view-foo.component.html
+++ b/src/app/view-styles/components/view-foo/view-foo.component.html
@@ -1,3 +1,17 @@
+@if (isShow) {
+    <div @fadeIn @fadeOut style="font-size: 30px">I'm animated</div>
+}
+
+<div
+    [@fadeInOut]="isShow ? 'open' : 'close'" style="font-size: 30px"
+    (@fadeInOut.start)='onAnimationStart($event)'
+    (@fadeInOut.done)='onAnimationDone($event)'
+>
+    I'm animated 2
+</div>
+
+<button style="font-size: 30px" (click)="isShow = !isShow">change show</button>
+
 @for (item of todoArr; track $index) {
     <app-todo-item [todo]="item"></app-todo-item>
 }
