--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<header class="header">
-    <h1>Мой заголовок</h1>
+<!--<header class="header">-->
+<!--    <h1>Мой заголовок</h1>-->
 
-    <my-navigation></my-navigation>
-</header>
+<!--    <my-navigation></my-navigation>-->
+<!--</header>-->
 
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+
+<h1>counter : {{ counter() }}</h1>
+
+<button (click)="plus()">Plus</button>
+
+<h1>doubleCounter : {{ doubleCounter() }}</h1>
